--- a/exercise_10/VAE_CVAE.ipynb
+++ b/exercise_10/VAE_CVAE.ipynb
@@ -16,7 +16,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with np.load('vae-cvae-challenge.npz') as fh:\n",
@@ -28,28 +30,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def VAE:\n",
-    "    def __init__(batch_size=32, latent_dim=1):\n",
-    "        self.is_training = tf.placeholder_with_default(True, shape=())\n",
+    "    def __init__(self, batch_size=32, latent_dim=1):\n",
     "        self.latent_dim = latent_dim\n",
     "        self.batch_size = batch_size\n",
     "        \n",
-    "        self.z_mean, self.z_log_var = _encoder()\n",
-    "        self.decoded = _decoder()\n",
+    "        self.is_training = tf.placeholder_with_default(True, shape=())\n",
+    "        self.image_input = tf.placeholder(dtype=tf.float32, shape=[None, 28, 28, 1])\n",
+    "        self.image_batch, self.iterator, _ = self._make_dataset_iterator()\n",
+    "        self.z_mean, self.z_log_var = self._encoder()\n",
+    "        self.z = self._sampler()\n",
+    "        self.decoded = self._decoder()\n",
     "        \n",
-    "        # think about the time when u want to build this graph\n",
-    "        samples = tf.random_normal((self.batch_size, self.laten_dim),\n",
-    "                                   mean=0.,\n",
-    "                                   stddev=1.,\n",
-    "                                   dtype=tf.float32)\n",
-    "        self.z = latent_mean + tf.sqrt(tf.exp(self.z_log_var)) * samples\n",
+    "        self.loss, self.optimization, self.reconstruction_loss, self.latent_loss = self._make_loss_opt()\n",
     "        \n",
-    "        # need loss and optimization routine\n",
+    "    def _make_dataset_iterator(self):\n",
+    "        dataset = tf.data.Dataset.from_tensor_slices(self.image_input)\n",
+    "        dataset = dataset.shuffle(buffer_size=20000)\n",
+    "        dataset = dataset.batch(batch_size=self.batch_size)\n",
+    "\n",
+    "        iterator = dataset.make_initializable_iterator()\n",
+    "        image_batch = iterator.get_next()\n",
+    "        return image_batch, iterator, dataset\n",
     "        \n",
-    "    def _encoder():\n",
+    "    def _encoder(self):\n",
     "        with tf.contrib.framework.arg_scope([tf.layers.conv2d, tf.layers.max_pooling2d],\n",
     "                                            activation_fn='relu', \n",
     "                                            filters=20, \n",
@@ -58,7 +67,7 @@
     "                                            activation='relu', \n",
     "                                            pool_size=2, \n",
     "                                            strides=1):\n",
-    "            x = tf.layers.conv2d(self.input, filters=16)\n",
+    "            x = tf.layers.conv2d(self.image_batch, filters=16)\n",
     "            x = tf.layers.max_pooling2d(x)\n",
     "            x = tf.layers.conv2d(x)\n",
     "            x = tf.layers.max_pooling2d(x)\n",
@@ -67,8 +76,16 @@
     "        z_mean = tf.layers.dense(x, units=self.latent_dim)\n",
     "        z_log_var = Dense(x, units=self.latent_dim)\n",
     "        return z_mean, z_log_var\n",
+    "    \n",
+    "    def _sampler(self):\n",
+    "        samples = tf.random_normal((self.image_batch, self.latent_dim),\n",
+    "                                   mean=0.,\n",
+    "                                   stddev=1.,\n",
+    "                                   dtype=tf.float32)\n",
+    "        z = self.z_mean + tf.sqrt(tf.exp(self.z_log_var)) * samples\n",
+    "        return z\n",
     "        \n",
-    "    def _decoder():\n",
+    "    def _decoder(self):\n",
     "        with tf.contrib.framework.arg_scope([tf.layers.conv2d_transpose],\n",
     "                                            strides=2,\n",
     "                                            padding='valid',\n",
@@ -81,16 +98,55 @@
     "            decoded = tf.layers.conv2d_transpose(x, filters=1, strides=1, kernel_size=10)  # 1, 28, 28, 1\n",
     "        return decoded\n",
     "    \n",
-    "    def train(batch_size):\n",
-    "        # first encode\n",
-    "        # sample\n",
-    "        samples = tf.random_normal((self.batch_size, self.laten_dim),\n",
-    "                                   mean=0.,\n",
-    "                                   stddev=1.,\n",
-    "                                   dtype=tf.float32)\n",
-    "        self.z = latent_mean + tf.sqrt(tf.exp(self.z_log_var)) * samples\n",
-    "        # decode"
+    "    def _make_loss_opt(self):        \n",
+    "        reconstruction_loss = 0.5 * tf.sum(tf.squared_difference(self.decoded, self.image_input), axis=[1,2,3])\n",
+    "        reconstruction_loss = tf.reduce_mean(reconstruction_loss)\n",
+    "        latent_loss = 0.5 * tf.reduce_sum(1 + self.z_log_var - self.z_mean ** 2 - tf.exp(self.z_log_var), axis=1)\n",
+    "        latent_loss = tf.reduce_mean(latent_loss)\n",
+    "        loss = reconstruction_loss + latent_loss\n",
+    "        \n",
+    "        opt = tf.train.AdamOptimizer(learning_rate=1e-4).minimize(loss)\n",
+    "        return loss, opt, reconstruction_loss, latent_loss\n",
+    "    \n",
+    "    def train(self, session, images):\n",
+    "        _, loss, reconstruction_loss, latent_loss = session.run(\n",
+    "            [self.optimization, self.loss, self.reconstruction_loss, self.latent_loss], \n",
+    "            feed_dict={self.image_input: images,self.is_training: True}\n",
+    "        )\n",
+    "        return loss, reconstruction_loss, latent_loss\n",
+    "    \n",
+    "    def predict()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item = tf.constant(np.random.rand(10,5,3,2))\n",
+    "ok = tf.reduce_sum(np.random.rand(10,5,3,2), axis=item.rank)\n",
+    "with tf.Session() as sess:\n",
+    "    print(sess.run(ok.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(item.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -109,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
