--- a/exercise_10/VAE_CVAE.ipynb
+++ b/exercise_10/VAE_CVAE.ipynb
@@ -16,29 +16,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "with np.load('vae-cvae-challenge.npz') as fh:\n",
-    "    images, labels = fh['data_x'], fh['data_y']\n",
-    "    images = np.reshape(images, newshape=[-1, 28, 28, 1])\n",
-    "print(f'image shape: {images.shape}, labels shape: {labels.shape}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def VAE:\n",
-    "    def __init__(self, batch_size=32, latent_dim=1):\n",
+    "class VAE:\n",
+    "    def __init__(self, batch_size=32, latent_dim=2):\n",
     "        self.latent_dim = latent_dim\n",
-    "        self.batch_size = batch_size\n",
+    "        self.batch_size = tf.cast(tf.placeholder_with_default(batch_size, shape=()), dtype=tf.int64)\n",
     "        \n",
     "        self.is_training = tf.placeholder_with_default(True, shape=())\n",
     "        self.image_input = tf.placeholder(dtype=tf.float32, shape=[None, 28, 28, 1])\n",
@@ -59,26 +43,27 @@
     "        return image_batch, iterator, dataset\n",
     "        \n",
     "    def _encoder(self):\n",
-    "        with tf.contrib.framework.arg_scope([tf.layers.conv2d, tf.layers.max_pooling2d],\n",
-    "                                            activation_fn='relu', \n",
-    "                                            filters=20, \n",
-    "                                            kernel_size=5, \n",
-    "                                            padding='same', \n",
-    "                                            activation='relu', \n",
-    "                                            pool_size=2, \n",
-    "                                            strides=1):\n",
-    "            x = tf.layers.conv2d(self.image_batch, filters=16)\n",
-    "            x = tf.layers.max_pooling2d(x)\n",
-    "            x = tf.layers.conv2d(x)\n",
-    "            x = tf.layers.max_pooling2d(x)\n",
-    "            x = tf.layers.conv2d(x)\n",
-    "            x = tf.layers.max_pooling2d(x)\n",
+    "#         with tf.contrib.framework.arg_scope([tf.layers.conv2d, tf.layers.max_pool2d], \n",
+    "#                                             filters=20, \n",
+    "#                                             kernel_size=5, \n",
+    "#                                             padding='same', \n",
+    "#                                             strides=1, \n",
+    "#                                             activation='relu', \n",
+    "#                                             pool_size=2):\n",
+    "        conv_kwargs = {'kernel_size': 5, 'padding': 'same', 'strides': 1, 'activation': tf.nn.relu}\n",
+    "        pool_kwargs = {'padding': 'same', 'strides': 1, 'pool_size': 2}\n",
+    "        x = tf.layers.conv2d(self.image_batch, filters=16, **conv_kwargs)\n",
+    "        x = tf.layers.max_pooling2d(x, **pool_kwargs)\n",
+    "        x = tf.layers.conv2d(x, filters=20, **conv_kwargs)\n",
+    "        x = tf.layers.max_pooling2d(x, **pool_kwargs)\n",
+    "        x = tf.layers.conv2d(x, filters=20, **conv_kwargs)\n",
+    "        x = tf.layers.max_pooling2d(x, **pool_kwargs)\n",
     "        z_mean = tf.layers.dense(x, units=self.latent_dim)\n",
-    "        z_log_var = Dense(x, units=self.latent_dim)\n",
+    "        z_log_var = tf.layers.dense(x, units=self.latent_dim)\n",
     "        return z_mean, z_log_var\n",
     "    \n",
     "    def _sampler(self):\n",
-    "        samples = tf.random_normal((self.image_batch, self.latent_dim),\n",
+    "        samples = tf.random_normal(shape=[self.batch_size, self.latent_dim],\n",
     "                                   mean=0.,\n",
     "                                   stddev=1.,\n",
     "                                   dtype=tf.float32)\n",
@@ -86,20 +71,21 @@
     "        return z\n",
     "        \n",
     "    def _decoder(self):\n",
-    "        with tf.contrib.framework.arg_scope([tf.layers.conv2d_transpose],\n",
-    "                                            strides=2,\n",
+    "        with tf.contrib.framework.arg_scope([tf.contrib.layers.conv2d_transpose],\n",
+    "                                            stride=2,\n",
     "                                            padding='valid',\n",
-    "                                            activation=tf.nn.relu):\n",
+    "                                            activation_fn=tf.nn.relu):\n",
     "            x = tf.layers.dense(self.z, units=4)\n",
-    "            x = tf.reshape(x, shape=[1,2,2,1])\n",
-    "            x = tf.layers.conv2d_transpose(x, filters=20, kernel_size=5)  # 1, 7, 7, 1\n",
-    "            x = tf.layers.conv2d_transpose(x, filters=20, kernel_size=7)  # 1, 19, 19, 1\n",
-    "            x = tf.layers.conv2d_transpose(x, filters=16, strides=1, kernel_size=10)  # 1, 28, 28, 1\n",
-    "            decoded = tf.layers.conv2d_transpose(x, filters=1, strides=1, kernel_size=10)  # 1, 28, 28, 1\n",
+    "            x = tf.reshape(x, shape=[-1,2,2,1])\n",
+    "            x = tf.contrib.layers.conv2d_transpose(x, num_outputs=20, kernel_size=5)  # 1, 7, 7, 1\n",
+    "            x = tf.contrib.layers.conv2d_transpose(x, num_outputs=20, kernel_size=7)  # 1, 19, 19, 1\n",
+    "            x = tf.contrib.layers.conv2d_transpose(x, num_outputs=16, stride=1, kernel_size=10)  # 1, 28, 28, 1\n",
+    "            decoded = tf.contrib.layers.conv2d_transpose(x, num_outputs=1, stride=1, kernel_size=10)  # 1, 28, 28, 1\n",
+    "            # wrong size\n",
     "        return decoded\n",
     "    \n",
     "    def _make_loss_opt(self):        \n",
-    "        reconstruction_loss = 0.5 * tf.sum(tf.squared_difference(self.decoded, self.image_input), axis=[1,2,3])\n",
+    "        reconstruction_loss = 0.5 * tf.reduce_sum(tf.squared_difference(self.decoded, self.image_input), axis=[1,2,3])\n",
     "        reconstruction_loss = tf.reduce_mean(reconstruction_loss)\n",
     "        latent_loss = 0.5 * tf.reduce_sum(1 + self.z_log_var - self.z_mean ** 2 - tf.exp(self.z_log_var), axis=1)\n",
     "        latent_loss = tf.reduce_mean(latent_loss)\n",
@@ -109,13 +95,67 @@
     "        return loss, opt, reconstruction_loss, latent_loss\n",
     "    \n",
     "    def train(self, session, images):\n",
+    "        session.run(self.iterator.initializer, feed_dict={self.image_input: images})\n",
+    "        \n",
     "        _, loss, reconstruction_loss, latent_loss = session.run(\n",
     "            [self.optimization, self.loss, self.reconstruction_loss, self.latent_loss], \n",
-    "            feed_dict={self.image_input: images,self.is_training: True}\n",
+    "            feed_dict={self.is_training: True}\n",
     "        )\n",
     "        return loss, reconstruction_loss, latent_loss\n",
     "    \n",
-    "    def predict()"
+    "    def predict(self, session, images):\n",
+    "        session.run(self.iterator.initializer, feed_dict={self.image_input: images})\n",
+    "        \n",
+    "        _, loss, reconstruction_loss, latent_loss = session.run(\n",
+    "            [self.optimization, self.loss, self.reconstruction_loss, self.latent_loss], \n",
+    "            feed_dict={self.batch_size: 1,\n",
+    "                       self.is_training: True}\n",
+    "        )\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with np.load('vae-cvae-challenge.npz') as fh:\n",
+    "    images, labels = fh['data_x'], fh['data_y']\n",
+    "    images = np.reshape(images, newshape=[-1, 28, 28, 1])\n",
+    "print(f'image shape: {images.shape}, labels shape: {labels.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_epochs = 1\n",
+    "vae = VAE()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    \n",
+    "    for epoch in range(count_epochs):\n",
+    "        while True:\n",
+    "            try:\n",
+    "                loss, reconstruction_loss, latent_loss = vae.train(sess, images)\n",
+    "                print('ok')\n",
+    "            except tf.errors.OutOfRangeError:\n",
+    "                break\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = tf.constant(np.random.rand(10,20,5))\n",
+    "x = tf.reshape(x, shape=tf.constant((-1, 2)))"
    ]
   },
   {
@@ -142,11 +182,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def iterate(predicate, images, iterator, session):\n",
+    "    session.run(iterator.initializer, feed_dict={real_images: images})\n",
+    "    while True:\n",
+    "        try:\n",
+    "            result = session.run(predicate)\n",
+    "        except tf.errors.OutOfRangeError:\n",
+    "            break\n",
+    "    return result"
+   ]
   }
  ],
  "metadata": {
@@ -165,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
