--- a/exercise_10/VAE_CVAE.ipynb
+++ b/exercise_10/VAE_CVAE.ipynb
@@ -22,21 +22,21 @@
    "outputs": [],
    "source": [
     "class VAE:\n",
-    "    def __init__(self, batch_size=32, latent_dim=2):\n",
+    "    def __init__(self, batch_size=100, latent_dim=2):\n",
     "        self.latent_dim = latent_dim\n",
     "        self.batch_size = tf.cast(tf.placeholder_with_default(batch_size, shape=()), dtype=tf.int64)\n",
     "        self.convd_size = 22\n",
     "        self.dense_size = int(np.sqrt(self.convd_size * self.convd_size * 16))\n",
-    "        \n",
+    "\n",
     "        self.is_training = tf.placeholder_with_default(True, shape=())\n",
     "        self.image_input = tf.placeholder(dtype=tf.float32, shape=[None, 28, 28, 1])\n",
     "        self.image_batch, self.iterator, _ = self._make_dataset_iterator()\n",
     "        self.z_mean, self.z_log_var = self._encoder()\n",
     "        self.z = self._sampler()\n",
     "        self.decoded = self._decoder()\n",
-    "        \n",
+    "\n",
     "        self.loss, self.optimization, self.reconstruction_loss, self.latent_loss = self._make_loss_opt()\n",
-    "        \n",
+    "\n",
     "    def _make_dataset_iterator(self):\n",
     "        dataset = tf.data.Dataset.from_tensor_slices(self.image_input)\n",
     "        dataset = dataset.shuffle(buffer_size=20000)\n",
@@ -45,72 +45,68 @@
     "        iterator = dataset.make_initializable_iterator()\n",
     "        image_batch = iterator.get_next()\n",
     "        return image_batch, iterator, dataset\n",
-    "        \n",
+    "\n",
     "    def _encoder(self):\n",
-    "        conv_kwargs = {'kernel_size': 3, 'filters': 16, 'padding': 'valid', 'strides': 1, 'activation': tf.nn.relu}\n",
+    "        conv_kwargs = {'kernel_size': 3, 'filters': 16, 'padding': 'valid', 'strides': 1, 'activation': tf.nn.leaky_relu}\n",
     "        x = tf.layers.conv2d(self.image_batch, **conv_kwargs)\n",
     "        x = tf.layers.batch_normalization(x, training=self.is_training)\n",
     "        x = tf.layers.conv2d(x, **conv_kwargs)\n",
     "        x = tf.layers.conv2d(x, **conv_kwargs)\n",
     "        x = tf.layers.flatten(x)\n",
-    "        x = tf.layers.dense(x, units=self.dense_size, activation=tf.nn.relu)\n",
+    "        x = tf.layers.dense(x, units=self.dense_size, activation=tf.nn.leaky_relu)\n",
     "        z_mean = tf.layers.dense(x, units=self.latent_dim)\n",
     "        z_log_var = tf.layers.dense(x, units=self.latent_dim)\n",
     "        return z_mean, z_log_var\n",
-    "    \n",
+    "\n",
     "    def _sampler(self):\n",
     "        self.samples = tf.random_normal(shape=[self.batch_size, self.latent_dim],\n",
-    "                                   mean=0.,\n",
-    "                                   stddev=1.,\n",
-    "                                   dtype=tf.float32)\n",
+    "                                        mean=0.,\n",
+    "                                        stddev=1.,\n",
+    "                                        dtype=tf.float32)\n",
     "        z = self.z_mean + tf.sqrt(tf.exp(self.z_log_var)) * self.samples\n",
     "        return z\n",
-    "        \n",
+    "\n",
     "    def _decoder(self):\n",
-    "        conv_kwargs = {'kernel_size': 3, 'strides': 1, 'activation': tf.nn.relu}\n",
-    "        self.z = tf.Print(self.z, [self.z_mean, self.z_log_var, self.samples])\n",
-    "        x = tf.layers.dense(self.z, units=self.dense_size, activation=tf.nn.relu)\n",
-    "        x = tf.layers.dense(x, units=self.dense_size ** 2, activation=tf.nn.relu)\n",
+    "        conv_kwargs = {'padding': 'valid', 'strides': 1}\n",
+    "        # self.z = tf.Print(self.z, [self.z_mean, tf.shape(self.z_mean)], 'z_mean')\n",
+    "        # self.z = tf.Print(self.z, [self.z_log_var, tf.shape(self.z_log_var)], 'z_log_var')\n",
+    "        # self.z = tf.Print(self.z, [self.samples, tf.shape(self.samples)], 'samples')\n",
+    "        x = tf.layers.dense(self.z, units=self.dense_size, activation=tf.nn.leaky_relu)\n",
+    "        x = tf.layers.dense(x, units=self.dense_size ** 2, activation=tf.nn.leaky_relu)\n",
     "        x = tf.reshape(x, shape=[-1, self.convd_size, self.convd_size, 16])\n",
-    "        x = tf.layers.conv2d_transpose(x, filters=16, padding='valid', **conv_kwargs)\n",
-    "        x = tf.layers.conv2d_transpose(x, filters=16, padding='valid', **conv_kwargs)\n",
-    "        decoded = tf.layers.conv2d_transpose(x, filters=1,padding='valid', **conv_kwargs)\n",
+    "        x = tf.layers.conv2d_transpose(x, kernel_size=5, filters=16, activation=tf.nn.leaky_relu, **conv_kwargs)\n",
+    "        x = tf.layers.conv2d_transpose(x, kernel_size=5, filters=16, activation=tf.nn.leaky_relu, **conv_kwargs)\n",
+    "        x = tf.layers.conv2d(x, kernel_size=3, filters=8, activation=tf.nn.leaky_relu, **conv_kwargs)\n",
+    "        decoded = tf.layers.conv2d(x, kernel_size=3, filters=1, padding='same', activation=tf.nn.sigmoid)\n",
     "        return decoded\n",
-    "    \n",
-    "    def _make_loss_opt(self):        \n",
-    "        reconstruction_loss = 0.5 * tf.reduce_sum(tf.squared_difference(self.decoded, self.image_batch), axis=[1,2,3])\n",
+    "\n",
+    "    def _make_loss_opt(self):\n",
+    "        # reconstruction_loss = tf.reduce_sum(tf.squared_difference(self.decoded, self.image_batch), axis=[1, 2, 3])\n",
+    "        reconstruction_loss = tf.reduce_sum(self.image_batch * tf.log(1e-10 + self.decoded) +\n",
+    "                                            (1 - self.image_batch) * tf.log(1e-10 + 1 - self.decoded),\n",
+    "                                            axis=[1, 2, 3])\n",
     "        reconstruction_loss = tf.reduce_mean(reconstruction_loss)\n",
     "        latent_loss = 0.5 * tf.reduce_sum(1 + self.z_log_var - self.z_mean ** 2 - tf.exp(self.z_log_var), axis=1)\n",
     "        latent_loss = tf.reduce_mean(latent_loss)\n",
-    "        loss = reconstruction_loss + latent_loss\n",
-    "        \n",
-    "        opt = tf.train.AdamOptimizer(learning_rate=1e-4).minimize(loss)\n",
+    "        loss = -(reconstruction_loss + latent_loss)\n",
+    "        # loss = tf.Print(loss, [reconstruction_loss, latent_loss], 'losses')\n",
+    "\n",
+    "        opt = tf.train.AdamOptimizer(learning_rate=1e-5).minimize(loss)\n",
     "        return loss, opt, reconstruction_loss, latent_loss\n",
-    "    \n",
+    "\n",
     "    def train(self, session, images):\n",
     "        session.run(self.iterator.initializer, feed_dict={self.image_input: images})\n",
-    "        \n",
+    "\n",
     "        while True:\n",
     "            try:\n",
-    "                _, loss, reconstruction_loss, latent_loss = session.run(\n",
-    "                    [self.optimization, self.loss, self.reconstruction_loss, self.latent_loss], \n",
+    "                _, loss, reconstruction_loss, latent_loss, decoded = session.run(\n",
+    "                    [self.optimization, self.loss, self.reconstruction_loss, self.latent_loss, self.decoded],\n",
     "                    feed_dict={self.is_training: True}\n",
     "                )\n",
     "            except tf.errors.OutOfRangeError:\n",
     "                break\n",
-    "                \n",
-    "        return loss, reconstruction_loss, latent_loss\n",
-    "    \n",
-    "    def predict(self, session, images):\n",
-    "        session.run(self.iterator.initializer, feed_dict={self.image_input: images})\n",
-    "        \n",
-    "        _, loss, reconstruction_loss, latent_loss = session.run(\n",
-    "            [self.optimization, self.loss, self.reconstruction_loss, self.latent_loss], \n",
-    "            feed_dict={self.batch_size: 1,\n",
-    "                       self.is_training: True, \n",
-    "                       self.image_input: images}\n",
-    "        )\n",
-    "        return None"
+    "\n",
+    "        return loss, reconstruction_loss, latent_loss, decoded"
    ]
   },
   {
@@ -131,16 +127,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_epochs = 1\n",
+    "def visualize_digits(tensor_to_visualize):\n",
+    "    plt.axis('off')\n",
+    "    plt.imshow(np.squeeze(tensor_to_visualize), cmap='gray')\n",
+    "    plt.show()\n",
+    "\n",
+    "count_epochs = 25\n",
     "vae = VAE()\n",
     "\n",
     "# Check sampling with tf.Print (alraedy in there, but logging doesn't work in jupyter.)\n",
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
-    "    \n",
+    "\n",
     "    for epoch in range(count_epochs):\n",
-    "        loss, reconstruction_loss, latent_loss = vae.train(sess, images)\n",
-    "        "
+    "        loss, reconstruction_loss, latent_loss, decoded = vae.train(sess, images)\n",
+    "        visualize_digits(decoded[0])"
    ]
   },
   {
@@ -158,9 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "item = tf.constant(np.random.rand(10,5,3,2))\n",
